# Blasting_robot

./: .gitignore  .rosinstall  README.md
.github/workflows/: build.yaml
docs/: jetson_deployment.md
src/: CMakeLists.txt  LICENSE
src/velathrobotics_ros2-main/velathrobotics_description/: CMakeLists.txt  package.xml
src/velathrobotics_ros2-main/velathrobotics_description/launch/: display_2wd_rover.launch.py  display_4wd_rover.launch.py  display_flipper.launch.py  display_max.launch.py  display_mini.launch.py  display_miti.launch.py  display_miti_65.launch.py
src/velathrobotics_ros2-main/velathrobotics_description/urdf/: flipper.urdf  max.urdf  max_100.urdf  max_130.urdf  max_150.urdf  max_65.urdf  mini.urdf  miti.urdf  miti_65.urdf  rover_2wd.urdf  rover_4wd.urdf
src/velathrobotics_ros2-main/velathrobotics_description/urdf/accessories/: rover_dev_payload.urdf  rplidar_s2.urdf
src/velathrobotics_ros2-main/velathrobotics_driver/: CMakeLists.txt  package.xml
src/velathrobotics_ros2-main/velathrobotics_driver/config/: max_100_config.yaml  max_130_config.yaml  max_150_config.yaml  max_65_config.yaml  mini_config.yaml  miti_65_config.yaml  miti_config.yaml  nav2_params.yaml  pro_config.yaml  zero_config.yaml
src/velathrobotics_ros2-main/velathrobotics_driver/include/: roverrobotics_ros2_driver.hpp
src/velathrobotics_ros2-main/velathrobotics_driver/launch/: accessories.launch.py  max.launch.py  mini.launch.py  miti.launch.py  miti_65.launch.py  navigation_launch.py  outdoor_navigation_launch.py  pro.launch.py  ps4_controller.launch.py  ps5_controller.launch.py  robot_localizer.launch.py  robot_localizer_outdoor.launch.py  slam_launch.py  zero.launch.py
src/velathrobotics_ros2-main/velathrobotics_driver/src/: roverrobotics_ros2_driver.cpp
src/velathrobotics_ros2-main/velathrobotics_gazebo/: CMakeLists.txt  package.xml
src/velathrobotics_ros2-main/velathrobotics_gazebo/launch/: 2wd_rover_gazebo.launch.py  4wd_rover_gazebo.launch.py  flipper_gazebo.launch.py  max_gazebo.launch.py  mini_gazebo.launch.py  miti_65_gazebo.launch.py  miti_gazebo.launch.py
src/velathrobotics_ros2-main/velathrobotics_input_manager/: CMakeLists.txt  package.xml
