<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>velathrobotics_driver</name>
  <version>1.0.2</version>
  <description>
    ROS2 Wrapper for Velath Robots
  </description>
  <maintainer email="rdx@velathrobotics.com">Jack Rivera</maintainer>
  <license>Apache-2.0</license>

  <author email="info@velathrobotics.com">Rover Robotics</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>eigen</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>std_msgs</depend>
  <!-- <depend>rover_msgs</depend> -->
  <depend>tf2_geometry_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
